# core

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/django_starter_core/: apis.py  urls.py  utilities.py
src/django_starter_core/contrib/about/: apps.py  forms.py  models.py
src/django_starter_core/contrib/about/migrations/: 0002_contact_about_metrics_about_milestones_about_values.py
src/django_starter_core/contrib/admin/: __init__.py  admin.py  apps.py
src/django_starter_core/contrib/admin/tags/: __init__.py
src/django_starter_core/contrib/auth/: __init__.py  apps.py  models.py
src/django_starter_core/contrib/auth/migrations/: 0002_alter_userclaim_value.py  0003_historicaluserclaim.py
src/django_starter_core/contrib/cache/: cache_usage_examples.py  manager.py
src/django_starter_core/contrib/captcha/: apis.py
src/django_starter_core/contrib/code_generator/: analyzer.py  apps.py  entities.py  generator.py
src/django_starter_core/contrib/config/: __init__.py  apis.py  apps.py  models.py
src/django_starter_core/contrib/docs/: views.py
src/django_starter_core/contrib/guide/: views.py
src/django_starter_core/contrib/monitoring/: apis.py  apps.py  tests.py
src/django_starter_core/contrib/navbar/: __init__.py
src/django_starter_core/contrib/notifications/: apps.py  models.py  views.py
src/django_starter_core/contrib/seed/: __init__.py  tests.py
src/django_starter_core/db/: __init__.py
src/django_starter_core/middleware/: prometheus.py
tests/: settings.py  test_smoke.py  urls.py
(+18 files in other folders)
